Add Command class